# TelegramDigestCLISkill

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/plugins/tg-digest/: skill.md
.claude/skills/tg-digest/: SKILL.md
skills/tg-digest/: SKILL.md
tests/: test_cli.py  test_config.py  test_db.py  test_deliver.py  test_feedback.py  test_filter.py  test_profile.py  test_ranges.py  test_summarizer.py
tg_digest/: cli.py  config.py  db.py  deliver.py  feedback.py  filter.py  llm.py  profile.py  ranges.py  scraper.py  summarizer.py  tg_sync.py
