[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-digest"
version = "0.1.0"
description = "Personal Telegram channel digest agent with self-learning preferences"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nikultimo" },
]
keywords = ["telegram", "digest", "llm", "cli", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "telethon>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
tg-digest = "tg_digest.cli:app"

[project.urls]
Homepage = "https://github.com/nikultimo/tg-digest"
Issues = "https://github.com/nikultimo/tg-digest/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_digest*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
